Changes to home page. - Make the statistic numbers smaller on smaller screens. - Add a tagline to the statistics. - Make blog post appear one after the other. - Responsive fix to the header logo.

--- a/_sass/partials/_navigation.scss
+++ b/_sass/partials/_navigation.scss
@@ -7,7 +7,7 @@ $nav-scroll-color-hover: rgba(0, 0, 0, .8);
     position: fixed;
     z-index: 500;
     width: 100%;
-    padding: 0 30px;
+    padding: 0 20px;
     @media (min-width: 768px) and (max-width: 991px) {
         padding: 13px 0 0 34px;
     }
@@ -43,7 +43,7 @@ $nav-scroll-color-hover: rgba(0, 0, 0, .8);
         height: 55px;
         transform: scale(.7);
         vertical-align: middle;
-         @media (max-width: 767px) {
+        @media (max-width: 767px) {
             transform: scale(.6);
         }
     }
