--- a/_sass/partials/_statistic.scss
+++ b/_sass/partials/_statistic.scss
@@ -11,7 +11,7 @@
             font-size: 80px;
         }
         @media (max-width: 767px) {
-            font-size: 70px;
+            font-size: 50px;
         }
     }
     .stat-info {
